@@ -21,30 +21,16 @@
 
 #include "audioplayer.h"
 #include "audioplayerprivate.h"
-#include <SDL/SDL.h>
-
-// SDL defines its own main() function in SDL_main. And so does Qt, so if we continue without
-// the #define below we'll end up with the following link error:
-// libqtmain.a(qtmain_win.o):qtmain_win.cpp:(.text+0x159): undefined reference to `qMain(int, char**)'
-#undef main
-
-#define SDL_AUDIO_BUFFER_SIZE 1024
-
-// SDL audio callback
-void sdl_audio_callback( void *userdata, Uint8 *stream, int len)
-{
-	AudioPlayerPrivate * player = (AudioPlayerPrivate*) userdata;
-	player->SDL_audio_callback( stream, len );
-}
 
 
 AudioPlayerPrivate::AudioPlayerPrivate()
+    : QIODevice()
 {
+    m_audioDevice = 0;
 	pFormatCtx = 0;
 	aCodecCtx = 0;
 	pCodec = 0;
 
-	m_audioOpened = false;
 	m_playing = false;
 	m_currentTime = 0;
 	m_totalTime = 0;
@@ -52,6 +38,9 @@ AudioPlayerPrivate::AudioPlayerPrivate()
 	m_frame = 0;
 	m_sample_buf_size = 0;
 	m_sample_buf_idx = 0;
+
+    // Open the QIODevice unbuffered so we wouldn't have to deal with QIODevice's own buffer
+    QIODevice::open( QIODevice::ReadOnly | QIODevice::Unbuffered );
 }
 
 bool AudioPlayerPrivate::isPlaying() const
@@ -83,22 +72,18 @@ bool AudioPlayerPrivate::init()
 	// Init FFMpeg stuff
 	ffmpeg_init_once();
 
-	// Init the SDL
-	if ( SDL_Init (SDL_INIT_AUDIO ) )
-	{
-		QMessageBox::critical( 0,
-							  QObject::tr("SDL init failed"),
-							  QObject::tr("Cannot initialize audio subsystem:\n\n%1").arg(SDL_GetError()) );
-		return false;
-	}
-
 	return true;
 }
 
-void AudioPlayerPrivate::close()
+void AudioPlayerPrivate::closeAudio()
 {
 	QMutexLocker m( &m_mutex );
-	SDL_PauseAudio( 1 );
+
+    if ( m_audioDevice )
+    {
+        m_audioDevice->stop();
+        delete m_audioDevice;
+    }
 
 	// Close the codec
 	if ( aCodecCtx )
@@ -108,15 +93,10 @@ void AudioPlayerPrivate::close()
 	if ( pFormatCtx )
 		avformat_close_input( &pFormatCtx );
 
-	if ( m_audioOpened )
-	{
-		SDL_CloseAudio();
-		m_audioOpened = false;
-	}
-
 	if ( m_frame )
 		av_free( m_frame );
 
+    m_audioDevice = 0;
 	m_frame = 0;
 	pFormatCtx = 0;
 	aCodecCtx = 0;
@@ -133,10 +113,10 @@ static QString getMetaTag( AVDictionary* meta, const char * tagname )
 		return "";
 }
 
-bool AudioPlayerPrivate::open( const QString& filename )
+bool AudioPlayerPrivate::openAudio( const QString& filename )
 {
 	// Close if opened
-	close();
+    closeAudio();
 
 	QMutexLocker m( &m_mutex );
 
@@ -206,22 +186,24 @@ bool AudioPlayerPrivate::open( const QString& filename )
 
 	avcodec_open2( aCodecCtx, aCodec, 0 );
 
-	// Now initialize the SDL audio device
-	SDL_AudioSpec wanted_spec, spec;
+    // Now initialize the audio device
+    QAudioFormat format;
+    format.setSampleRate( aCodecCtx->sample_rate );
+    format.setChannelCount( aCodecCtx->channels );
+    format.setSampleSize( 16 );
+    format.setCodec("audio/pcm");
+    format.setByteOrder( QAudioFormat::LittleEndian );
+    format.setSampleType( QAudioFormat::SignedInt );
 
-	wanted_spec.freq = aCodecCtx->sample_rate;
-	wanted_spec.format = AUDIO_S16SYS;
-	wanted_spec.channels = aCodecCtx->channels;
-	wanted_spec.silence = 0;
-	wanted_spec.samples = SDL_AUDIO_BUFFER_SIZE;
-	wanted_spec.callback = sdl_audio_callback;
-	wanted_spec.userdata = this;
+    QAudioDeviceInfo info( QAudioDeviceInfo::defaultOutputDevice() );
 
-	if ( SDL_OpenAudio( &wanted_spec, &spec ) < 0 )
-	{
-		m_errorMsg = QObject::tr("Cannot initialize audio device: %1") .arg( SDL_GetError() );
-		return false;
-	}
+    if ( !info.isFormatSupported(format) )
+    {
+        m_errorMsg = "Your audio device cannot play this format";
+        return false;
+    }
+
+    m_audioDevice = new QAudioOutput( format );
 
 	// Allocate the buffer
     m_frame = av_frame_alloc();
@@ -232,15 +214,14 @@ bool AudioPlayerPrivate::open( const QString& filename )
 		return false;
 	}
 
-	m_audioOpened = true;
-
 	// Init the packet queue
-	queueClear();
+    queueClear();
+
 	return true;
 }
 
 void AudioPlayerPrivate::queueClear()
-{
+{    
 	m_sample_buf_idx = 0;
 	m_sample_buf_size = 0;
 	m_sample_buffer.clear();
@@ -251,10 +232,10 @@ void AudioPlayerPrivate::play()
 {
 	QMutexLocker m( &m_mutex );
 	m_playing = true;
-	SDL_PauseAudio( 0 );
+    m_audioDevice->start( this );
 }
 
-void AudioPlayerPrivate::reset()
+void AudioPlayerPrivate::resetAudio()
 {
 	seekTo( 0 );
 }
@@ -263,7 +244,7 @@ void AudioPlayerPrivate::stop()
 {
 	QMutexLocker m( &m_mutex );
 	m_playing = false;
-	SDL_PauseAudio( 1 );
+    m_audioDevice->stop();
 }
 
 void AudioPlayerPrivate::seekTo( qint64 value )
@@ -276,34 +257,37 @@ void AudioPlayerPrivate::seekTo( qint64 value )
 	queueClear();
 }
 
-// Called from SDL thread - no GUI/Widget functions!
-void AudioPlayerPrivate::SDL_audio_callback( Uint8 *stream, int len)
+// Called from QAudioOutput thread - no GUI/Widget functions!
+qint64 AudioPlayerPrivate::readData(char *data, qint64 maxSize)
 {
 	QMutexLocker m( &m_mutex );
+    int out = 0;
 
-	while ( len > 0 )
+    while ( out < maxSize )
 	{
 		if ( m_sample_buf_idx >= m_sample_buf_size )
 		{
 			// We have already sent all our data; get more
 			if ( !MoreAudio() )
-			{
-				// If error, output silence
-				memset( stream, 0, len );
-				return;
-			}
+            {
+                m_playing = false;
+                return 0;
+            }
 		}
 
-		int len1 = m_sample_buf_size - m_sample_buf_idx;
+        int len = qMin( m_sample_buf_size - m_sample_buf_idx, (unsigned int) maxSize - out );
+        memcpy( data + out, (uint8_t *) m_sample_buffer.data() + m_sample_buf_idx, len );
 
-		if ( len1 > len )
-			len1 = len;
+        out += len;
+        m_sample_buf_idx += len;
+    }
 
-		memcpy( stream, (uint8_t *) m_sample_buffer.data() + m_sample_buf_idx, len1 );
-		len -= len1;
-		stream += len1;
-		m_sample_buf_idx += len1;
-	}
+    return out;
+}
+
+qint64 AudioPlayerPrivate::writeData(const char *data, qint64 len)
+{
+    return -1;
 }
 
 // Called from the callback - no GUI/Widget functions!
@@ -315,7 +299,10 @@ bool AudioPlayerPrivate::MoreAudio()
 
 		// Read a frame
 		if ( av_read_frame( pFormatCtx, &packet ) < 0 )
+        {
+            QMetaObject::invokeMethod( pAudioPlayer, "finished", Qt::QueuedConnection, Q_ARG( qint64, m_currentTime ) );
 			return false;  // Frame read failed (e.g. end of stream)
+        }
 
 		if ( packet.stream_index != audioStream )
 		{
@@ -331,7 +318,7 @@ bool AudioPlayerPrivate::MoreAudio()
 									 pFormatCtx->streams[audioStream]->time_base,
 									 AV_TIME_BASE_Q ) / 1000;
 
-		QMetaObject::invokeMethod( pAudioPlayer, "emitTickSignal", Qt::QueuedConnection, Q_ARG( qint64, m_currentTime ) );
+        QMetaObject::invokeMethod( pAudioPlayer, "tick", Qt::QueuedConnection, Q_ARG( qint64, m_currentTime ) );
 
 		// Save the orig data so we can call av_free_packet() on it
 		void * porigdata = packet.data;
@@ -372,9 +359,3 @@ bool AudioPlayerPrivate::MoreAudio()
 
 	return false;
 }
-
-/*
-QByteArray AudioPlayerPrivate::nextAudioBuffer()
-{
-}
-*/
