@@ -33,18 +33,6 @@ int main(int argc, char *argv[])
 	MainWindow wnd;
 	wnd.show();
 
-	return app.exec();
+    app.exec();
+    return 0;
 }
-
-#if defined (_WIN32)
-
-// SDL defines its own main() function in SDL_main. And so does Qt, so if we continue without
-// the #define below we'll end up with the following link error:
-// libqtmain.a(qtmain_win.o):qtmain_win.cpp:(.text+0x159): undefined reference to `qMain(int, char**)'
-
-int qMain( int argc, char ** argv )
-{
-	return main( argc, argv );
-}
-
-#endif
